# touch-link

./: .gitignore  AGENTS.md  CLAUDE.md  README.md
.github/workflows/: release.yml
android/TouchLink/: settings.gradle.kts  version.properties
android/TouchLink/app/: build.gradle.kts
android/TouchLink/app/src/main/: AndroidManifest.xml
android/TouchLink/app/src/main/java/com/touchlink/: AppState.kt  MainActivity.kt  Opcode.kt  Packet.kt
android/TouchLink/app/src/main/java/com/touchlink/command/: Command.kt
android/TouchLink/app/src/main/java/com/touchlink/gesture/: CoordinateMapper.kt  GestureRecognizer.kt  TouchEvent.kt
android/TouchLink/app/src/main/java/com/touchlink/session/: Session.kt
android/TouchLink/app/src/main/java/com/touchlink/transport/: DiscoveredDevice.kt  Discovery.kt  Transport.kt  UdpDiscovery.kt  UdpTransport.kt
android/TouchLink/app/src/main/java/com/touchlink/ui/: ConnectionScreen.kt  TouchpadView.kt
docs/plans/: 2026-07-11-touchlink-design.md  2026-07-11-touchlink-plan.md
server/touchlink-server/: Cargo.toml
server/touchlink-server/.cargo/: config.toml
server/touchlink-server/src/: discovery.rs  error.rs  main.rs  packet.rs
server/touchlink-server/src/command/: router.rs
server/touchlink-server/src/input/: keyboard.rs  mouse.rs
server/touchlink-server/src/session/: session.rs
server/touchlink-server/src/transport/: tcp.rs  udp.rs
